--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
           <version>4.13.1</version>
           <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>org.mindrot</groupId>
+          <artifactId>jbcrypt</artifactId>
+          <version>0.4</version>
+      </dependency>
   </dependencies>
 
   <build>
