--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -50,4 +50,13 @@
         <url-pattern>/loginForm</url-pattern>
     </servlet-mapping>
 
+    <filter>
+        <filter-name>AuthorizationFilter</filter-name>
+        <filter-class>com.hrmanagementsystem.controller.AuthorizationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AuthorizationFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
