--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
           <version>1.10.2</version>
           <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>org.glassfish</groupId>
+          <artifactId>javax.json</artifactId>
+          <version>1.1.4</version>
+      </dependency>
   </dependencies>
 
   <build>
